Final spring-boot blog completed with functioning buttons/links and styling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
+#enable access to the H2 console via browser
 spring.h2.console.enabled = true
+#specifies the end point the console is available at
 spring.h2.console.path = /console
+ 
+#allows data to be saved even when server is restarted
+#creates this file if it doesn’t exist 
+spring.datasource.url = jdbc:h2:file:~/data/blogapp
+#this is the line you would use for it to be saved to mem and refresh every time you restart the server
+#spring.datasource.url = jdbc:h2:mem:test
+ 
+#This line tells the server to automatically match the schema found in the external file every time it is restarted
+spring.jpa.hibernate.ddl-auto = update
+ 
 spring.datasource.platform = h2
+spring.datasource.driverClassName = org.h2.Driver
